...
      style: [styles?.menuItem],
      textStyle: { color: Colors.danger },
      isSuspended: userDetails?.status === "DELETED",
    },
    {
      title: t("logOut"),
      testID: "profile-logout-button",
      icon: (
        <AntDesign
          name="logout"
          size={28}
          color={Colors.danger}
          style={{ marginLeft: 5 }}
...
